<resources>
    <string name="app_name">AVONdroid</string>
    <string name="title_activity_start">StartActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="btnOrders">Zamówienia</string>
    <string name="btnClients">Klienci</string>
    <string name="btnProducts">Produkty</string>
    <string name="btnExit">Wyjście</string>

    <string name="btnGenerateFakeData">Wygeneruj przykładowe dane</string>
    <string name="btnCleanData">Wyczyść dane</string>


    <string name="btnAddClient">Dodaj nowego klienta</string>
    <string name="btnAddProduct">Dodaj nowy produkt</string>
    <string name="btnAddOrder">Dodaj nowe zamówienie</string>

    <string name="msgDataDeletedSuccessfully">Dane zostały skasowane poprawnie</string>
    <string name="msgDataDeletedFail">Wystąpił problem przy usuwaniu danych</string>

    <string name="msgDataGeneratedSuccessfully">Dane zostały wygenerowane poprawnie</string>
    <string name="msgDataGeneratedFail">Wystąpił problem przy generowaniu danych</string>


</resources>
