<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dmm.avondroid.StartActivity">

    <Button
        android:id="@+id/btnOrders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnOrders"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btnClients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnOrders"
        android:text="@string/btnClients"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btnProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnClients"
        android:text="@string/btnProducts"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btnGenerateFakeData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnProducts"
        android:background="@android:color/holo_red_light"
        android:textColor="@android:color/white"
        android:text="@string/btnGenerateFakeData"
        android:onClick="onClick"/>


    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/btnExit"
        android:onClick="onClick"/>


</RelativeLayout>
